--- a/style.css
+++ b/style.css
@@ -13,3 +13,19 @@ canvas {
     background-color: #fff;
     border: 2px solid #000;
 }
+
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #ff4d4d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute;
+    top: 70%;
+}
+
+button:hover {
+    background-color: #ff1a1a;
+}
