--- a/style.css
+++ b/style.css
@@ -16,6 +16,16 @@ canvas {
     box-shadow: 0 0 20px #00ffcc, 0 0 40px #00ffcc;
 }
 
+#starsCanvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Place behind other elements */
+    background: transparent;
+}
+
 button {
     padding: 10px 20px;
     font-size: 16px;
